EntityFramework Setup  (UserController)

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataContext": "Server=LAPTOP-29114T5U\\SQLEXPRESS;Database=DatingAppDb;Trusted_Connection=True;"
+  }
 }
