Implementing JWT Authentication

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "TokenKey": "Super Secret Unguessable key",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DataContext": "Server=LAPTOP-29114T5U\\SQLEXPRESS;Database=DatingAppDb;Trusted_Connection=True;"
