--- a/Client/package.json
+++ b/Client/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-toastr": "^14.1.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
