--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.1.0",
