--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
