--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
@@ -26,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.1.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
