Photo Upload(Cloudniary) - User Photos

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,8 +6,22 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  //JWT Token (Authorization)
+  //==========
   "TokenKey": "Super Secret Unguessable key",
+
+  //Cloudinary Settings (Image Upload)
+  //====================
+  "CloudinarySettings": {
+    "CloudName": "dotnetcore",
+    "Apikey": "335923163772971",
+    "ApiSecret": "vIj05QoFwyckvPMIE62_TuA3DR4"
+  },
   "AllowedHosts": "*",
+
+  //DB Connection String
+  //=====================
   "ConnectionStrings": {
     "DataContext": "Server=LAPTOP-29114T5U\\SQLEXPRESS;Database=DatingAppDb;Trusted_Connection=True;"
   }
