--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.1.3",
