--- a/Client/package.json
+++ b/Client/package.json
@@ -29,6 +29,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-spinner": "^11.0.2",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.1.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
